refactor: adjusts endpoints
